# calc_pi

./: Cargo.toml  Makefile  README.md
src/: algos.rs  lib.rs  main.rs
