[package]
name = "calc_pi"
version = "0.1.0"
edition = "2024"
authors = ["BreezeWhite, <miyashita2010@tuta.io>"]
description = "CLI for calculating millions of Pi digits within seconds. Various algorithms are supported."
repository = "https://github.com/BreezeWhite/calc_pi"
readme = "README.md"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rayon = "1.10.0"
rug = "1.27.0"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true
panic = "abort"
